@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+21-Oct-2009 Ian MacLennan
+ # Fixed start upload button to adjust to markup changes
+
 20-Oct-2009 Ercan Ozkaya
  ^ Updated MooTools core to 1.2.4
  ^ Merged branch erdsiger (com_massmail is merged into com_users)
